@startuml
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam shadowing false

' --- Interfaces ---

interface ILLMInterface <<Interface>> {
  + getResponse(messages: Message[]): Promise<String>
  + generateTitle(firstMessage: String): Promise<String>
  + listModels(): Promise<String[]>
  + setModel(model: String): void
}

interface ICache <<Interface>> {
  + getMessages(chatID: String): Promise<Message[]>
  + saveHistory(chatID: String, message: Message): Promise<Void>
  + saveChat(chat: Chat): Promise<Void>
}

interface IDatabase <<Interface>> {
  + getMessages(chatID: String): Promise<Message[]>
  + getChats(userID: String): Promise<Chat[]>
  + getChat(chatID: String): Promise<Chat>
  + saveChat(chat: Chat): Promise<Void>
  + saveHistory(chatID: String, message: Message): Promise<Void>
}

interface ITokenVerifier <<Interface>> {
  + verifyToken(token: String): String 
  note right: Returns extracted userID
}

' --- Concrete Auth & Core Classes ---

class GoogleAuthService {
  + clientID: String
  + verifyToken(token: String): String
}

class AuthMiddleware {
  + verifier: ITokenVerifier
  + authenticate(req: Request, res: Response, next: NextFunction): void
}

class App {
  + app: express.app
  + store: StorageManager
  + auth: AuthMiddleware
  + listen(): Void
  - initStorage(): Void
  - setupRoutes(): Void
}

class ChatController {
  + createChat(req: Request, res: Response): Void
  + sendMessage(req: Request, res: Response): Void
  + listChats(req: Request, res: Response): Void
  + listModels(req: Request, res: Response): Void
  + getChatMessages(req: Request, res: Response): Void
}

class SchemaFactory {
  + {static} getRedisSchema(commonSchema: Object): Object
  + {static} getMongooseSchema(commonSchema: Object): Object
}

' --- Singleton Managers & DBs ---

class StorageManager <<Singleton>> {
  - {static} instance: StorageManager = new StorageManager()
  + Database: IDatabase
  + Cache: ICache
  - StorageManager()
  + {static} getInstance(): StorageManager
  + getChats(userID: String): Chat[]
  + getMessages(chatID: String): Message[]
  + addMessage(chatID: String, message: Message): void
}

class Redis <<Singleton>> {
  - {static} instance: Redis = new Redis()
  + dbModel: Chat
  + TTL: int
  + Connection: any
  - Redis()
  + {static} getInstance(): Redis
  + getMessages(chatID: String): Message[]
  + saveHistory(chatID: String, message: Message): Void
  + saveChat(chat: Chat): Void
}

class MongoDB <<Singleton>> {
  - {static} instance: MongoDB = new MongoDB()
  + dbModel: Chat
  + Connection: any
  - MongoDB()
  + {static} getInstance(): MongoDB
  + getMessages(chatID: String): Message[]
  + getChats(userID: String): Chat[]
  + getChat(chatID: String): Chat
  + saveHistory(chatID: String, message: Message): Void
}

' --- External Services ---
class GroqService {
  + API_Key: String
  + Model: String
  + getResponse(messages: Message[]): String
  + setModel(model: String): void
}

' --- Domain Models ---

class Chat {
  + Id: String
  + userID: String
  + Title: String
  + LastAccessed: String
  + messages: Message[]
  + {static} schema: Object
}

class Message {
  + Id: String
  + Type: enum("User", "AI")
  + message: String
  + {static} schema: Object
}

' --- Relationships ---

' Interface Implementations 
GroqService ..|> ILLMInterface
Redis ..|> ICache
MongoDB ..|> IDatabase
GoogleAuthService ..|> ITokenVerifier

' Auth Flow
App --> AuthMiddleware : registers
AuthMiddleware --> ITokenVerifier : uses
AuthMiddleware ..> ChatController : passes verified userID to

' Controller Associations
ChatController --> ILLMInterface : uses
ChatController --> StorageManager : uses

' App and Storage Associations
App --> StorageManager : uses
StorageManager --> ICache : cache layer
StorageManager --> IDatabase : persistent layer

' Schema Factory usage
Redis ..> SchemaFactory : uses
MongoDB ..> SchemaFactory : uses
SchemaFactory ..> Chat : transforms schema
SchemaFactory ..> Message : transforms schema

' Composition 
Chat *-- "0..*" Message : contains

@enduml
